[package]
name = "fire_protocol"
version = "0.1.0"
edition = "2021"
authors = ["Noxzion"]
description = "Secure data transfer protocol with multi-layer encryption"
license = "MIT"

[[bin]]
name = "fire_protocol"
path = "src/main.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[dependencies]
aes = "0.8"
aes-gcm = "0.10"
chacha20 = "0.9"
chacha20poly1305 = "0.10"
rand = "0.8"
sha2 = "0.10"
hmac = "0.12"
pbkdf2 = "0.12"
base64 = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
bytes = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.10"
clap = { version = "4.0", features = ["derive"] }

[lib]
name = "fire_protocol"
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true